frontend/frontend.log

> yourfin-temp@0.1.0 dev
> next dev

▲ Next.js 16.2.2 (Turbopack)
- Local:         http://localhost:3000
- Network:       http://192.168.1.11:3000
- Environments: .env.local
✓ Ready in 689ms
⚠ Warning: Next.js inferred your workspace root, but it may not be correct.
 We detected multiple lockfiles and selected the directory of /Users/vinhh/package-lock.json as the root directory.
 To silence this warning, set `turbopack.root` in your Next.js config, or consider removing one of the lockfiles if it's not needed.
   See https://nextjs.org/docs/app/api-reference/config/next-config-js/turbopack#root-directory for more information.
 Detected additional lockfiles: 
   * /Users/vinhh/Documents/Wealth Project/wealth-portfolio/frontend/package-lock.json
   * /Users/vinhh/Documents/Wealth Project/wealth-portfolio/package-lock.json


Image with src "/media/landingPage/realtime_landingpage.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/gold_landingpage.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/profit_landingpage.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/HandBot_landingPage.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/News_landingpage.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/crypto_assets.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/forex_asstes.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/stocks_assets.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/cash_assets.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/saving_assets.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/realestate_assets.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/alternative_assets.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
Image with src "/media/landingPage/assets/collectivles_assets.jpg" is using quality "90" which is not configured in images.qualities [75]. Please update your config to [75, 90].
Read more: https://nextjs.org/docs/messages/next-image-unconfigured-qualities
 GET / 200 in 734ms (next.js: 470ms, application-code: 264ms)
[browser] Market data fetch failed: SyntaxError: The string did not match the expected pattern.
    at json ([native code])
    at <unknown> (../../../Wealth Project/wealth-portfolio/frontend/src/app/components/MarketSection.tsx:108:46)
  106 |                 fetch('/api/market/crypto?symbols=ETHUSDT'),
  107 |             ]);
> 108 |             const btcData = await btcRes.json();
      |                                              ^
  109 |             const ethData = await ethRes.json();
  110 |
  111 |             // Fetch commodities (Gold, Silver, Crude Oil) - these return changePercent
[browser] Market data fetch failed: SyntaxError: The string did not match the expected pattern.
    at json ([native code])
    at <unknown> (../../../Wealth Project/wealth-portfolio/frontend/src/app/components/MarketSection.tsx:108:46)
  106 |                 fetch('/api/market/crypto?symbols=ETHUSDT'),
  107 |             ]);
> 108 |             const btcData = await btcRes.json();
      |                                              ^
  109 |             const ethData = await ethRes.json();
  110 |
  111 |             // Fetch commodities (Gold, Silver, Crude Oil) - these return changePercent
[browser] Market data fetch failed: SyntaxError: The string did not match the expected pattern.
    at json ([native code])
    at <unknown> (../../../Wealth Project/wealth-portfolio/frontend/src/app/components/MarketSection.tsx:108:46)
  106 |                 fetch('/api/market/crypto?symbols=ETHUSDT'),
  107 |             ]);
> 108 |             const btcData = await btcRes.json();
      |                                              ^
  109 |             const ethData = await ethRes.json();
  110 |
  111 |             // Fetch commodities (Gold, Silver, Crude Oil) - these return changePercent
[browser] Market data fetch failed: SyntaxError: The string did not match the expected pattern.
 GET / 200 in 45ms (next.js: 6ms, application-code: 39ms)
